Adding CustomFieldGroupLinks providing the ability, to start with, to add custom field groups to Task GRoups and Task Items.  This is still work in progress.

--- a/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
+++ b/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
@@ -1599,6 +1599,16 @@
       "dateTo": "2119-02-17",
       "languageItems": [],
       "status": "N"
+    },
+    {
+      "id": "00000000-0000-0000-0000-000000000000",
+      "textCode": 11010,
+      "description": "Custom Field Group Screens",
+      "text": "Add Custom Field Group",
+      "dateFrom": "2020-02-17",
+      "dateTo": "2119-02-17",
+      "languageItems": [],
+      "status": "N"
     }
   ]
 }
