--- a/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
+++ b/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
@@ -782,6 +782,16 @@
     },
     {
       "id": "00000000-0000-0000-0000-000000000000",
+      "textCode": 10409,
+      "description": "Team Screens",
+      "text": "Edit Team",
+      "dateFrom": "2020-02-17",
+      "dateTo": "2119-02-17",
+      "languageItems": [],
+      "status": "N"
+    },
+    {
+      "id": "00000000-0000-0000-0000-000000000000",
       "textCode": 10500,
       "description": "Message Boxes",
       "text": "Error on save.",
