--- a/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
+++ b/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
@@ -582,6 +582,16 @@
     },
     {
       "id": "00000000-0000-0000-0000-000000000000",
+      "textCode": 10229,
+      "description": "General titles",
+      "text": "Save",
+      "dateFrom": "2020-02-17",
+      "dateTo": "2119-02-17",
+      "languageItems": [],
+      "status": "N"
+    },
+    {
+      "id": "00000000-0000-0000-0000-000000000000",
       "textCode": 10300,
       "description": "Client Screens",
       "text": "Clients",
