Adding document automation functionality.  Includes adding shortnames to tasks and templates along and auto setting these.

--- a/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
+++ b/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
@@ -622,6 +622,16 @@
     },
     {
       "id": "00000000-0000-0000-0000-000000000000",
+      "textCode": 10230,
+      "description": "General titles",
+      "text": "Automated",
+      "dateFrom": "2020-02-17",
+      "dateTo": "2119-02-17",
+      "languageItems": [],
+      "status": "N"
+    },
+    {
+      "id": "00000000-0000-0000-0000-000000000000",
       "textCode": 10300,
       "description": "Client Screens",
       "text": "Clients",
@@ -1675,6 +1685,16 @@
       "textCode": 11010,
       "description": "Custom Field Group Screens",
       "text": "Add Custom Field Group",
+      "dateFrom": "2020-02-17",
+      "dateTo": "2119-02-17",
+      "languageItems": [],
+      "status": "N"
+    },
+    {
+      "id": "00000000-0000-0000-0000-000000000000",
+      "textCode": 11011,
+      "description": "Custom Field Group Screens",
+      "text": "Short Name",
       "dateFrom": "2020-02-17",
       "dateTo": "2119-02-17",
       "languageItems": [],
