--- a/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
+++ b/src/Services/PanacheSoftware.Service.Foundation/Data/Seeds/Language/language-seed-v1.json
@@ -652,6 +652,26 @@
     },
     {
       "id": "00000000-0000-0000-0000-000000000000",
+      "textCode": 10233,
+      "description": "General titles",
+      "text": "Creation Date",
+      "dateFrom": "2020-02-17",
+      "dateTo": "2119-02-17",
+      "languageItems": [],
+      "status": "N"
+    },
+    {
+      "id": "00000000-0000-0000-0000-000000000000",
+      "textCode": 10234,
+      "description": "General titles",
+      "text": "Value",
+      "dateFrom": "2020-02-17",
+      "dateTo": "2119-02-17",
+      "languageItems": [],
+      "status": "N"
+    },
+    {
+      "id": "00000000-0000-0000-0000-000000000000",
       "textCode": 10300,
       "description": "Client Screens",
       "text": "Clients",
